--- a/frontend/src/components/TattooCard/styles.css
+++ b/frontend/src/components/TattooCard/styles.css
@@ -11,7 +11,12 @@
     color: white;
     font-family: "Space Mono", monospace;
     margin-top: 10px;
+
+    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+    box-shadow: rgba(0, 0, 0, 0.4) 5px 5px, rgba(0, 0, 0, 0.3) 10px 10px, rgba(0, 0, 0, 0.2) 15px 15px, rgba(0, 0, 0, 0.1) 20px 20px, rgba(0, 0, 0, 0.05) 25px 25px;
+
 }
+
 
 
 .tattoo-card-top-container{
