Pagina de Admin e nesting de rotas

--- a/frontend/src/components/NavBar/styles.css
+++ b/frontend/src/components/NavBar/styles.css
@@ -6,6 +6,11 @@
     max-height: 80px;
 }
 
+.navbar-toggler{
+    color: blue;
+    background-color: aquamarine;
+}
+
 .nav-bar-container header{
     display: flex; 
     justify-content: space-between;
