--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -8,9 +8,15 @@ body {
     background-image: linear-gradient(to left, #1a1919 0%, black 100%);
 
     background-image: aliceblue;
+
+    color: white;
   }
 
   a {
     text-decoration: none;
     color: inherit;
+  }
+
+  ul{
+    list-style: none;
   }
