--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,7 +52,7 @@ ul {
   margin-left: 10px;
 }
 
-.login-submit {
+/* .login-submit {
   margin-bottom: 10px;
 }
 
@@ -69,3 +69,4 @@ ul {
   margin-bottom: 30px;
 }
 
+ */
