--- a/frontend/src/pages/Admin/Auth/styles.css
+++ b/frontend/src/pages/Admin/Auth/styles.css
@@ -3,23 +3,24 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 100px);
+    flex-direction: row;
 }
 
 .auth-banner-container{
+    width: 100%;
+    /* background-color: blue; */
+    margin: 0;
+    padding: 0;
 }
 
 .auth-banner-container img{
     height: 600px;
-    width: 460px;
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .auth-form-container{
-    height: 600px;
-    width: 460px;
-    margin-left: 35px;
-   
+    height: 600px;  
     background-color: rgba(56, 53, 53, 0.589);
-    /* background-color: aqua; */
 }
