--- a/frontend/src/pages/Admin/Navbar/styles.css
+++ b/frontend/src/pages/Admin/Navbar/styles.css
@@ -8,7 +8,6 @@
 .admin-nav-container {
   padding: 10px;
   background-color: rgba(82, 77, 77, 0.733);
-  height: 100vh;
 }
 
 .admin-nav-item {
@@ -45,7 +44,7 @@
   .admin-nav-container {
     padding: 0;
     width: 300px;
-    /* height: calc(100% - 90px); */
+    height: calc(100vh - 90px);
   }
 
   .admin-nav-item{
