Feat: Estilizando margens e containers do formulário

--- a/frontend/src/pages/Admin/Tattoos/Form/styles.css
+++ b/frontend/src/pages/Admin/Tattoos/Form/styles.css
@@ -1,11 +1,35 @@
-.tattoo-crud-form-card{
-    padding: 20px;
-    border: solid 1px gray;
-    border-radius: 10px;
+.tattoo-crud-form-card {
+  padding: 20px;
+  border: solid 1px gray;
+  border-radius: 10px;
 }
 
-.tattoo-crud-form-title{
-    font-weight: bold;
-    font-size: 22px;
-    letter-spacing: -0.015px;
+.tattoo-crud-form-title {
+  font-weight: bold;
+  font-size: 22px;
+  letter-spacing: -0.015px;
+  margin-bottom: 30px;
+}
+
+.tattoo-crud-inputs-container{
+    margin-bottom: 30px;
+}
+
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+
+.tattoo-crud-inputs-left {
+  margin-bottom: 30px;
+}
+
+.tattoo-crud-buttons-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media(min-width: 992px){
+    .tattoo-crud-inputs-container{
+        margin-bottom: 0;
+    }
 }
