--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -1,54 +1,104 @@
-.home-container{
- background-image: url(../Home/../../assets/img/homeImg.png);  
- background-repeat: no-repeat;
- /* background-position: center;
+.home-container {
+  background-image: url(../Home/../../assets/img/tatuadoor.webp);
+  background-repeat: no-repeat;
+  /* background-position: center;
  background-attachment: fixed; */
- background-size: cover;
- background-color: aqua;
- width: 100%;
- height: 100%;
+  background-size: cover;
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
 }
 
-.home-content{
-    width: 100%;
-    height: calc(100vh - 80px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.home-content {
+  width: 100%;
+  height: calc(100vh - 80px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  font-size: 36px;
+  font-family: "Space Mono", monospace;
+}
+
+.home-text-content {
+  color: white;
+  width: 65%;
+}
+.title-home-text {
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.subtitle-home-text {
+  margin-top: 30px;
+  font-size: 0.7em;
+}
+
+.btn-home-container {
+  margin-top: 30px;
+}
+
+.btn-home-container button {
+  background-color: transparent;
+  color: white;
+  width: 11em;
+  height: 3em;
+  border: solid 1px orange;
+  font-family: "Space Mono", monospace;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+@media (min-width: 320px) {
+  .title-home-text {
+    font-size: 0.6em;
+    width: 90%;
+  }
+
+  .subtitle-home-text {
+    font-size: 0.4em;
+  }
+
+  .btn-home-container button {
+    width: 10em;
+    height: 2.7em;
+  }
+}
+
+@media (min-width: 768px) {
+  .title-home-text {
+    font-size: 0.8em;
+    width: 90%;
+  }
+
+  .subtitle-home-text {
+    font-size: 0.6em;
+  }
+
+  .btn-home-container button {
+    width: 10em;
+    height: 2.7em;
+  }
+}
+
+@media (min-width: 1280px) {
+  .title-home-text {
+    font-size: 1.2em;
     text-align: center;
-    flex-direction: column;
-    font-size: 36px;
-    font-family: "Space Mono", monospace;
-}
+  }
 
-.home-text-content{
-    color: white;
-    width: 65%;
-    
-}
-.home-text-content h1{
-    font-size: 1.2em ;
-    text-align: center;  
-}
-
-.home-text-content p{
-    margin-top: 30px;
+  .subtitle-home-text {
     font-size: 0.7em;
-}
+  }
 
-.btn-home-container{
+  .btn-home-container {
     margin-top: 30px;
-}
+  }
 
-.btn-home-container button{
-    background-color: transparent;
-    color: white;
+  .btn-home-container button {
     width: 11em;
     height: 3em;
-    border: solid 1px orange;
-    font-family: "Space Mono", monospace;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-
+  }
 }
