Feat: React Select layout

--- a/frontend/src/pages/Admin/Tattoos/Form/styles.css
+++ b/frontend/src/pages/Admin/Tattoos/Form/styles.css
@@ -35,6 +35,14 @@
     font-weight: bold;
 }
 
+.tattoo-crud-select__control{
+  border-radius: 10px !important;
+  font-size: 1em;
+  letter-spacing: -0.015em;
+  color: #263238 !important;
+  height: 50px;
+}
+
 @media(min-width: 576px){
     .tattoo-crud-buttons-container{
         justify-content: flex-end;
