--- a/frontend/src/components/TattooFilter/styles.css
+++ b/frontend/src/components/TattooFilter/styles.css
@@ -8,16 +8,17 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 10px;
 }
 
-.tattoo-filter-name-container input{
-    border: none;
+.tattoo-filter-name-container input {
+  border: none;
 }
-.tattoo-filter-name-container input:focus{
-    box-shadow: none;
+.tattoo-filter-name-container input:focus {
+  box-shadow: none;
 }
-.tattoo-filter-name-container input::placeholder{
-    color: #9e9e9e;
+.tattoo-filter-name-container input::placeholder {
+  color: #9e9e9e;
 }
 
 .tattoo-filter-name-container img {
@@ -25,6 +26,45 @@
   width: 30px;
 }
 
+.tattoo-filter-search-icon {
+  border: none;
+  background-color: unset;
+}
+
+.tattoo-filter-bottom-container {
+  display: flex;
+}
+
+.tattoo-filter-styles-container {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.btn-tattoo-filter-clear {
+  font-weight: bold;
+  border-radius: 10px;
+}
+.btn-tattoo-filter-word {
+  display: none;
+}
+
+.tattoo-filter-select{
+
+}
+
+.tattoo-filter-select__control{
+    font-size: 1em;
+    letter-spacing: -0.015em;
+    color: #263238 !important;
+    border: none !important;
+    border-bottom: 1px solid #e1e1e1 !important;
+  }
+
+@media (min-width: 576px) {
+  .btn-tattoo-filter-word {
+    display: unset ;
+  }
+}
 @media (min-width: 768px) {
   .tatoo-filter-container {
     margin-left: 20px;
