--- a/frontend/src/components/TattooFilter/styles.css
+++ b/frontend/src/components/TattooFilter/styles.css
@@ -1,7 +1,10 @@
 .tatoo-filter-container {
-  margin-bottom: 20px;
-  padding: 15px;
+/*   margin-bottom: 10px;
+ */  padding: 15px;
   color: black;
+  background-color: rgba(31, 28, 28, 0.747);
+  background-color: #f2f2f2; /* Cinza claro */
+  font-family: "Space Mono", monospace;
 }
 
 .tattoo-filter-name-container {
@@ -9,16 +12,22 @@
   align-items: center;
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 10px;
+  background-color: transparent;
 }
 
 .tattoo-filter-name-container input {
   border: none;
+  background-color: transparent;
 }
 .tattoo-filter-name-container input:focus {
   box-shadow: none;
+  background-color: transparent;
+  color: black;
+  font-weight: bold;
 }
 .tattoo-filter-name-container input::placeholder {
   color: #9e9e9e;
+  font-weight: bold;
 }
 
 .tattoo-filter-name-container img {
@@ -44,6 +53,7 @@
   font-weight: bold;
   border-radius: 10px;
 }
+
 .btn-tattoo-filter-word {
   display: none;
 }
@@ -53,7 +63,7 @@
   letter-spacing: -0.015em;
   color: #263238 !important;
   border: none !important;
-  border-bottom: 1px solid #e1e1e1 !important;
+  border-bottom: 1px solid #e1e1e1 !important;  
 }
 
 @media (min-width: 576px) {
@@ -61,11 +71,13 @@
     display: unset;
   }
 }
+
 @media (min-width: 768px) {
   .tatoo-filter-container {
     margin-left: 20px;
     flex: 1;
     padding: 10px 15px;
+    max-width: 1020px;
   }
   .tattoo-filter-form {
     display: flex;
@@ -80,4 +92,11 @@
   .tattoo-filter-bottom-container {
     flex: 1;
   }
+}
+
+@media (min-width: 1200px) {
+  .tatoo-filter-container {
+    max-width: 1080px;
+  }
+
 }
