--- a/frontend/src/components/CardTattoo/styles.css
+++ b/frontend/src/components/CardTattoo/styles.css
@@ -10,13 +10,14 @@
 .price-tattoo-card-listing {
   position: absolute;
   top: 75%;
-  left: 20%;
+  left: 70%;
+  right: 10%;
   transform: translate(-50%, -50%);
   z-index: 1;
   background-color: transparent;
   padding: 5px;
   border: solid gold 2px;
-  width: 90px;
+  width: 140px;
   text-align: center;
   color: gold;
   font-weight: bold;
