--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -1,10 +1,10 @@
 .home-container {
   background-image: url(../Home/../../assets/img/tatuadoor.webp);
   background-repeat: no-repeat;
-  /* background-position: center;
- background-attachment: fixed; */
+
+  background-position: center;
+ background-attachment: fixed;
   background-size: cover;
-  background-color: aqua;
   width: 100%;
   height: 100%;
 }
