--- a/frontend/src/pages/TattooDetails/styles.css
+++ b/frontend/src/pages/TattooDetails/styles.css
@@ -2,21 +2,30 @@
   /* background-color: white; */
   padding: 20px;
   font-family: "Space Mono", monospace;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .goback-container {
   display: flex;
   align-items: center;
-  font-size: 32px;
-  /*     background-color: aqua; */
+  width: 90%;
   color: white;
   margin-bottom: 20px;
+  justify-content: left;
+  align-items: center;
 }
 
 .goback-container img {
-  width: 35px;
-  height: 35px;
+  display: flex;
+  align-items: center;
+  width: 30px;
+  height: 30px;
   margin-right: 20px;
+  display: flex;
+  cursor: pointer;
 }
 
 .card-details-container {
@@ -26,9 +35,15 @@
 .card-tattoo-details-image {
   /*   background-color: blueviolet; */
   background-color: rgba(39, 38, 38, 0.788);
+  min-width: 600px;
   padding: 10px;
   text-align: center;
-  margin-right: 30px;
+  height: 560px;
+  
+/*   margin-right: 30px;
+ */  
+ 
+/*  background-color: aqua; */
 }
 
 .card-tattoo-details-image h3 {
@@ -38,11 +53,13 @@
 }
 
 .card-tattoo-details-image img {
-  width: 500px;
+  min-width: 500px;
   height: 500px;
 }
 .card-tattoo-details-resume {
-  background-color: rgba(39, 38, 38, 0.788);
+  /*   background-color: rgba(39, 38, 38, 0.788);
+ */
+  background-color: transparent;
   font-size: 32px;
   padding: 40px;
   font-weight: bold;
