--- a/frontend/src/pages/TattooDetails/styles.css
+++ b/frontend/src/pages/TattooDetails/styles.css
@@ -107,3 +107,81 @@
   color: rgb(204, 175, 10);
   font-size: 30px;
 }
+
+
+
+
+
+
+.recommendations-section{
+  margin-top: 50px;
+
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+  position: relative;
+}
+
+
+
+.carousel-items {
+  display: flex;
+  gap: 10px;
+  overflow: hidden; /* Para ocultar o overflow */
+  max-width: 600px; /* Ajuste conforme necessário */
+}
+
+.recommended-tattoo-card {
+  text-align: center;
+  padding: 10px;
+  flex: 0 0 30%; /* Ajusta a largura das tatuagens */
+}
+
+.tattoo-image {
+  width: 100%;
+  width: 180px;
+  border-radius: 8px;
+  height: 250px;
+
+}
+
+.tattoo-name {
+  margin-top: 0.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.carousel-button {
+  background-color: none;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  width: 50px;
+}
+
+
+
+.carousel-items {
+  display: flex;
+  gap: 10px;
+  overflow: hidden; /* Para ocultar o overflow */
+  max-width: 600px; /* Ajuste conforme necessário */
+  transition: transform 0.5s ease-in-out; /* Transição suave */
+}
+
+.recommended-tattoo-card {
+  text-align: center;
+  padding: 10px;
+  flex: 0 0 30%; /* Ajusta a largura das tatuagens */
+  transition: transform 0.5s ease-in-out; /* Transição para os itens */
+}
+
+.carousel-button:hover {
+  background-color: #ccc;
+}
